--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -205,3 +205,11 @@ d2）使用互斥条件组件判断推送消息方式
 ##### 图6-20 判断逻辑
 
 通过接口参数sendNodeId(推送节点编号)来判断推送消息方式，若sendNodeId为空，则推送手工消息；若sendNodeId不为空，则推送模版消息，如图6-21、图6-22所示：
+
+![6-21](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/22.png)
+
+##### 图6-21 手工消息流转条件
+
+![6-22](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/23.png)
+
+##### 图6-22 模板消息流转条件
