--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -213,3 +213,13 @@ d2）使用互斥条件组件判断推送消息方式
 ![6-22](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/23.png)
 
 ##### 图6-22 模板消息流转条件
+
+d3）推送手工消息相关流程
+
+![6-23](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/24.png)
+
+##### 图6-23 流程图
+
+d3.1）使用计数器组件对手工信息进行计数，需传入接收人List大小，操作符选择递增，如图6-24、图6-25所示：
+
+![6-24](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/25.png)
