--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -223,3 +223,13 @@ d3）推送手工消息相关流程
 d3.1）使用计数器组件对手工信息进行计数，需传入接收人List大小，操作符选择递增，如图6-24、图6-25所示：
 
 ![6-24](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/25.png)
+
+##### 图6-24 使用计数器组件
+
+![6-25](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/26.png)
+
+##### 图6-25 计数器详情
+
+d3.2）使用互斥条件组件判断是否继续推送手工消息循环，若手工消息计数器当前索引值小于接收人List大小，则继续推送手工消息循环；若手工消息计数器当前索引值大于等于接收人List大小，则退出推送手工消息循环，执行批量新增操作，如图6-26、图6-27、图6-28所示：
+
+![6-26](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/27.png)
