--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -233,3 +233,13 @@ d3.1）使用计数器组件对手工信息进行计数，需传入接收人List
 d3.2）使用互斥条件组件判断是否继续推送手工消息循环，若手工消息计数器当前索引值小于接收人List大小，则继续推送手工消息循环；若手工消息计数器当前索引值大于等于接收人List大小，则退出推送手工消息循环，执行批量新增操作，如图6-26、图6-27、图6-28所示：
 
 ![6-26](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/27.png)
+
+##### 图6-26 判断逻辑
+
+![6-27](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/28.png)
+
+##### 图6-27 继续推送手工消息循环的流转条件
+
+![6-28](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/29.png)
+
+##### 图6-28 退出推送手工消息循环的流转条件
