--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -291,3 +291,13 @@ d4）推送模板消息相关流程
 d4.1）使用单函数组件调用newMapInit(Object[] keyAndValue)构建查询参数sendNodeId，如图6-38、图6-39所示：
 
 ![6-38](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/37.png)
+
+##### 图6-38 构建查询参数sendNodeId
+
+![6-39](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/38.png)
+
+##### 图6-39 填写数据
+
+d4.2）使用单SQL组件查询《消息推送节点表》中对应推送节点编号sendNodeId的记录，具体SQL内容如下，如图6-40、图6-41所示：
+
+![6-40](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/39.png)
