--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -383,3 +383,15 @@ d4.7）与推送手工消息流程多函数组件【赋值Map追加List】配置
 ##### 图6-56 赋值Map并追加List
 
 ![6-57](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/53.png)
+
+##### 图6-57 数据列表：newMapPutAll
+
+![6-58](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/54.png)
+
+##### 图6-58 数据列表：listAddValue
+
+d5）批量新增《系统消息表》
+
+退出推送手工消息/推送模板消息循环后，都需要进行批量新增《系统消息表》操作，以实现消息的推送，具体SQL内容如下，最后将新增操作的执行结果输出：
+
+![6-59](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/63.png)
