--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -395,3 +395,13 @@ d5）批量新增《系统消息表》
 退出推送手工消息/推送模板消息循环后，都需要进行批量新增《系统消息表》操作，以实现消息的推送，具体SQL内容如下，最后将新增操作的执行结果输出：
 
 ![6-59](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/63.png)
+
+##### 图6-59 进行新增《系统消息表》操作
+
+![6-60](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/56.png)
+
+##### 图6-60 填写数据1
+
+![6-61](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/57.png)
+
+##### 图6-61 SQL内容
