--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -405,3 +405,11 @@ d5）批量新增《系统消息表》
 ![6-61](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/57.png)
 
 ##### 图6-61 SQL内容
+
+![6-62](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/64.png)
+
+##### 图6-62 填写数据2
+
+e）保存流程图
+
+保存并退出模型编辑窗口。
