--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -413,3 +413,13 @@ d5）批量新增《系统消息表》
 e）保存流程图
 
 保存并退出模型编辑窗口。
+
+![6-63](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/73.png)
+
+##### 图6-63 保存并退出
+
+f）提交并发布接口
+
+![6-64](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/74.png)
+
+##### 图6-64 提交并发布接口
