--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -423,3 +423,11 @@ f）提交并发布接口
 ![6-64](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/74.png)
 
 ##### 图6-64 提交并发布接口
+
+g）测试用例
+
+g1）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图6-65所示：
+
+![6-65](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/75.png)
+
+##### 图6-65 使用测试用例
