--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -431,3 +431,11 @@ g1）对接口进行测试用例，检验接口实现的功能是否可以达到
 ![6-65](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/75.png)
 
 ##### 图6-65 使用测试用例
+
+g2）编辑测试用例，如图6-66所示：
+
+![6-66](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/65.png)
+
+##### 图6-66 使用测试用例
+
+g3）录入参数信息并启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可，如图6-67所示：
