--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -439,3 +439,21 @@ g2）编辑测试用例，如图6-66所示：
 ##### 图6-66 使用测试用例
 
 g3）录入参数信息并启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可，如图6-67所示：
+
+
+
+g4）通过测试用例响应内容查看接口的执行结果，并同时查看系统消息表是否成功新增了消息，如图6-68所示：
+
+![6-68](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/76.png)
+
+##### 图6-68 查看测试用例响应内容
+
+g5）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试，如图6-69所示：
+
+![6-69](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/67.png)
+
+##### 图6-69 可视化日志
+
+![6-70](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/68.png)
+
+##### 图6-70 查看组件的节点数据
