--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -440,7 +440,9 @@ g2）编辑测试用例，如图6-66所示：
 
 g3）录入参数信息并启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可，如图6-67所示：
 
+![6-67](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/66.png)
 
+##### 图6-67 使用测试用例
 
 g4）通过测试用例响应内容查看接口的执行结果，并同时查看系统消息表是否成功新增了消息，如图6-68所示：
 
