--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -5,3 +5,11 @@
 本节案例主要实现通过录入学生学号，查询该学生各科成绩，从而计算该学生的各科成绩总和。案例不仅涉及单SQL组件、单函数组件、计数器组件、赋值组件等多种组件的使用，还综合运用了资源实例、实体模型、SQL管理、接口生成器功能模块，可以较好地体现全自动开发平台的功能。
 
 ##### 7.1.2 准备工作
+
+a）在数据库中准备3张数据表并配上相应的数据。
+
+##### 学生表：
+
+![7-1](https://www.feisuanyz.com/fsimage/alcj-image/chengji/1.png)
+
+##### 图7-1 学生表
