--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -13,3 +13,11 @@ a）在数据库中准备3张数据表并配上相应的数据。
 ![7-1](https://www.feisuanyz.com/fsimage/alcj-image/chengji/1.png)
 
 ##### 图7-1 学生表
+
+##### 课程表：
+
+![7-2](https://www.feisuanyz.com/fsimage/alcj-image/chengji/2.png)
+
+##### 图7-2 课程表
+
+##### 成绩表：
