--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -29,3 +29,11 @@ a）在数据库中准备3张数据表并配上相应的数据。
 b）创建项目
 
 ##### 具体可参见[《SoFlu社区版快速入门教程第4.1节：如何创建项目》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#41-%E5%A6%82%E4%BD%95%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE)
+
+![7-4](https://www.feisuanyz.com/fsimage/alcj-image/chengji/4.png)
+
+##### 图7-4 创建项目
+
+c）向项目中添加组件、平台自定义函数、数据库中间件资源等加载项
+
+##### 具体可参见[《SoFlu社区版快速入门教程第4.9节：如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#49-%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90)
