--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -71,3 +71,11 @@ d）使用数据库中间件资源创建嵌入式直连DB连接
 ##### 具体可参见[《SoFlu社区版基础操作指南第10.1.13节：如何新增数据库中间件资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#113-%E6%96%B0%E5%A2%9E%E6%95%B0%E6%8D%AE%E5%BA%93%E4%B8%AD%E9%97%B4%E4%BB%B6%E8%B5%84%E6%BA%90)
 
 可以采用直接填写配置项，也可以通过点击数据库连接来配置。
+
+![7-12](https://www.feisuanyz.com/fsimage/alcj-image/chengji/13.png)
+
+##### 图7-12 填写配置项
+
+![7-13](https://www.feisuanyz.com/fsimage/alcj-image/chengji/15.png)
+
+##### 图7-13 点击数据库连接
