--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -87,3 +87,11 @@ d）使用数据库中间件资源创建嵌入式直连DB连接
 e）利用接口生成器自动生成实体模型和SQL信息
 
 ##### 具体可参见[《SoFlu社区版基础操作指南第12.2.3节：自动生成实体模型》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B.md#23-%E8%87%AA%E5%8A%A8%E7%94%9F%E6%88%90%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B)及[《SoFlu社区版快速入门教程第4.10节：如何自动生成SQL信息》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#410-%E5%A6%82%E4%BD%95%E8%87%AA%E5%8A%A8%E7%94%9F%E6%88%90sql%E4%BF%A1%E6%81%AF)
+
+![7-15](https://www.feisuanyz.com/fsimage/alcj-image/chengji/16.png)
+
+##### 图7-15 选择数据1
+
+![7-16](https://www.feisuanyz.com/fsimage/alcj-image/chengji/17.png)
+
+##### 图7-16 选择数据2
