--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -95,3 +95,11 @@ e）利用接口生成器自动生成实体模型和SQL信息
 ![7-16](https://www.feisuanyz.com/fsimage/alcj-image/chengji/17.png)
 
 ##### 图7-16 选择数据2
+
+![7-17](https://www.feisuanyz.com/fsimage/alcj-image/chengji/18.png)
+
+##### 图7-17 生成实体模型
+
+![7-18](https://www.feisuanyz.com/fsimage/alcj-image/chengji/19.png)
+
+##### 图7-18 生成系统SQL
