--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -103,3 +103,15 @@ e）利用接口生成器自动生成实体模型和SQL信息
 ![7-18](https://www.feisuanyz.com/fsimage/alcj-image/chengji/19.png)
 
 ##### 图7-18 生成系统SQL
+
+##### 7.1.2 功能实现
+
+a）新增接口模块，新增接口，如图
+
+![7-19](https://www.feisuanyz.com/fsimage/alcj-image/chengji/20.png)
+
+##### 图7-19 编辑接口模块
+
+![7-20](https://www.feisuanyz.com/fsimage/alcj-image/chengji/21.png)
+
+##### 图7-20 编辑接口信息：基本信息
