--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -115,3 +115,15 @@ a）新增接口模块，新增接口，如图
 ![7-20](https://www.feisuanyz.com/fsimage/alcj-image/chengji/21.png)
 
 ##### 图7-20 编辑接口信息：基本信息
+
+![7-21](https://www.feisuanyz.com/fsimage/alcj-image/chengji/22.png)
+
+##### 图7-21 编辑接口信息：入参列表
+
+b）流程图编辑
+
+流程图概览：
+
+![7-22](https://www.feisuanyz.com/fsimage/alcj-image/chengji/23.png)
+
+##### 图7-22 流程图概览
