--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -127,3 +127,14 @@ b）流程图编辑
 ![7-22](https://www.feisuanyz.com/fsimage/alcj-image/chengji/23.png)
 
 ##### 图7-22 流程图概览
+
+单SQL组件（【查询】学生成绩）：根据学生学号在成绩表中查询该学生各科成绩，具体配置如图7-23、图7-24、图7-25、图7-26所示：
+
+![7-23](https://www.feisuanyz.com/fsimage/alcj-image/chengji/24.png)
+
+##### 图7-23 单SQL组件
+
+![7-24](https://www.feisuanyz.com/fsimage/alcj-image/chengji/25.png)
+
+##### 图7-24 填写数据
+
