--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -138,3 +138,14 @@ b）流程图编辑
 
 ##### 图7-24 填写数据
 
+![7-25](https://www.feisuanyz.com/fsimage/alcj-image/chengji/26.png)
+
+##### 图7-25 SQL内容
+
+![7-26](https://www.feisuanyz.com/fsimage/alcj-image/chengji/27.png)
+
+##### 图7-26 参数选择
+
+单函数组件（取成绩列表大小）：计算查询到的学生成绩列表记录条数，即该学生有几科成绩需要进行累加，具体配置如图7-27所示：
+
+![7-27](https://www.feisuanyz.com/fsimage/alcj-image/chengji/28.png)
