--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -149,3 +149,15 @@ b）流程图编辑
 单函数组件（取成绩列表大小）：计算查询到的学生成绩列表记录条数，即该学生有几科成绩需要进行累加，具体配置如图7-27所示：
 
 ![7-27](https://www.feisuanyz.com/fsimage/alcj-image/chengji/28.png)
+
+##### 图7-27 单函数组件
+
+计数器组件（【遍历】学生成绩列表）：循环遍历查询到的学生成绩记录，计数器默认从0逐次递加到查询到的记录数，具体配置如图7-28、图7-29、图7-30所示：
+
+![7-28](https://www.feisuanyz.com/fsimage/alcj-image/chengji/31.png)
+
+##### 图7-28 计数器组件
+
+![7-29](https://www.feisuanyz.com/fsimage/alcj-image/chengji/32.png)
+
+##### 图7-29 参数录入
