--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -161,3 +161,13 @@ b）流程图编辑
 ![7-29](https://www.feisuanyz.com/fsimage/alcj-image/chengji/32.png)
 
 ##### 图7-29 参数录入
+
+![7-30](https://www.feisuanyz.com/fsimage/alcj-image/chengji/33.png)
+
+##### 图7-30 参数描述
+
+赋值组件（计算成绩）：用来计算该学生各科成绩总和，具体配置如图7-31、图7-32、图7-33、图7-34、图7-35、图7-36所示：
+
+![7-31](https://www.feisuanyz.com/fsimage/alcj-image/chengji/34.png)
+
+##### 图7-31 赋值组件
