--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -171,3 +171,15 @@ b）流程图编辑
 ![7-31](https://www.feisuanyz.com/fsimage/alcj-image/chengji/34.png)
 
 ##### 图7-31 赋值组件
+
+![7-32](https://www.feisuanyz.com/fsimage/alcj-image/chengji/35.png)
+
+##### 图7-32 表格选择
+
+![7-33](https://www.feisuanyz.com/fsimage/alcj-image/chengji/37.png)
+
+##### 图7-33 填写模型数据1
+
+![7-34](https://www.feisuanyz.com/fsimage/alcj-image/chengji/38.png)
+
+##### 图7-34 填写模型数据2
