--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -183,3 +183,15 @@ b）流程图编辑
 ![7-34](https://www.feisuanyz.com/fsimage/alcj-image/chengji/38.png)
 
 ##### 图7-34 填写模型数据2
+
+![7-35](https://www.feisuanyz.com/fsimage/alcj-image/chengji/39.png)
+
+##### 图7-35 参数详情：【查询】学生成绩
+
+![7-36](https://www.feisuanyz.com/fsimage/alcj-image/chengji/40.png)
+
+##### 图7-36 参数详情：计算成绩
+
+互斥条件组件（判断是否循环）：用于判断是否继续循环进行成绩累加计算，当遍历学生成绩列表记录数小于查询到的学生成绩列表总数时，继续循环操作进行累加；当遍历学生成绩列表记录数大于等于查询到的学生成绩列表总数时，退出循环，具体配置如图7-37、图7-38、图7-39、图7-40、图7-41所示：
+
+![7-37](https://www.feisuanyz.com/fsimage/alcj-image/chengji/41.png)
