--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -205,3 +205,17 @@ b）流程图编辑
 ![7-39](https://www.feisuanyz.com/fsimage/alcj-image/chengji/43.png)
 
 ##### 图7-39 流转条件1
+
+![7-40](https://www.feisuanyz.com/fsimage/alcj-image/chengji/44.png)
+
+##### 图7-40 顺序流2
+
+![7-41](https://www.feisuanyz.com/fsimage/alcj-image/chengji/45.png)
+
+##### 图7-41 流转条件2
+
+输出结果组件：将赋值组件计算得到的结果输出，具体配置如图7-42、图7-43、图7-44所示：
+
+![7-42](https://www.feisuanyz.com/fsimage/alcj-image/chengji/46.png)
+
+##### 图7-42 输出结果组件
