--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -219,3 +219,11 @@ b）流程图编辑
 ![7-42](https://www.feisuanyz.com/fsimage/alcj-image/chengji/46.png)
 
 ##### 图7-42 输出结果组件
+
+![7-43](https://www.feisuanyz.com/fsimage/alcj-image/chengji/47.png)
+
+##### 图7-43 填写数据
+
+![7-44](https://www.feisuanyz.com/fsimage/alcj-image/chengji/48.png)
+
+##### 图7-44 参数描述：计算成绩
