--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/7. 计算学生各科总成绩.md
@@ -227,3 +227,12 @@ b）流程图编辑
 ![7-44](https://www.feisuanyz.com/fsimage/alcj-image/chengji/48.png)
 
 ##### 图7-44 参数描述：计算成绩
+
+c）完成流程图编辑之后，保存并退出。
+
+d）提交并发布接口。
+
+e）编辑测试用例录入参数（即学生学号），并启用可视化日志，如图7-45、图7-46所示：
+
+![7-45](https://www.feisuanyz.com/fsimage/alcj-image/chengji/49.png)
+
