--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
@@ -1,1 +1,7 @@
-test
+### 8. 识别图片文字
+
+#### 8.1 识别图片文字
+
+本节案例是利用全自动开发平台上传格式为JPG或PNG的图片文件，平台通过读取图片并调用第三方引擎Tesseract-ocr即可识别图片中的文字。通过简单使用平台中的两个组件，便可轻松实现该功能，体现了全自动开发平台便捷好用的特点。下文将为您介绍利用全自动开发平台实现的具体操作过程。
+
+#### 说明：本案例仅针对于英文和数字，识别的准确率由上传图片的清晰度和引擎的识别度决定。
