--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
@@ -5,3 +5,11 @@
 本节案例是利用全自动开发平台上传格式为JPG或PNG的图片文件，平台通过读取图片并调用第三方引擎Tesseract-ocr即可识别图片中的文字。通过简单使用平台中的两个组件，便可轻松实现该功能，体现了全自动开发平台便捷好用的特点。下文将为您介绍利用全自动开发平台实现的具体操作过程。
 
 #### 说明：本案例仅针对于英文和数字，识别的准确率由上传图片的清晰度和引擎的识别度决定。
+
+##### 8.1.1 效果展示
+
+进入全自动开发平台“识别图片文字”功能接口的测试用例页面，在接口入参处上传需识别文字的图片文件，启用可视化日志并执行接口，您便可以在测试用例查看详情页面看到图片文件经解析后的结果，展示出了图片中的文字，如图8-1所示：
+
+![8-1](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/2_1.png)
+
+##### 图8-1 上传的图片
