--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
@@ -13,3 +13,11 @@
 ![8-1](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/2_1.png)
 
 ##### 图8-1 上传的图片
+
+![8-2](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/5_12.png)
+
+##### 图8-2 测试用例页面
+
+![8-3](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/2_2.png)
+
+##### 图8-3 测试用例查看详情页面
