--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
@@ -21,3 +21,11 @@
 ![8-3](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/2_2.png)
 
 ##### 图8-3 测试用例查看详情页面
+
+##### 8.1.2 准备工作
+
+a）下载并安装Tesseract-ocr引擎软件，并在path变量中加入tesseract安装路径，如图8-4、8-5所示：
+
+![8-4](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/3_1.png)
+
+##### 图8-4 安装Tesseract-ocr引擎软件
