--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
@@ -29,3 +29,9 @@ a）下载并安装Tesseract-ocr引擎软件，并在path变量中加入tesserac
 ![8-4](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/3_1.png)
 
 ##### 图8-4 安装Tesseract-ocr引擎软件
+
+![8-5](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/3_2.png)
+
+##### 图8-5 添加tesseract安装路径
+
+b）本实例功能利用全自动开发平台的本地客户端进行开发，您需要提前下载安装本地客户端并启动成功，并在本地客户端下进入全自动开发平台，如图8-6、图8-7、图8-8所示：
