--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
@@ -35,3 +35,9 @@ a）下载并安装Tesseract-ocr引擎软件，并在path变量中加入tesserac
 ##### 图8-5 添加tesseract安装路径
 
 b）本实例功能利用全自动开发平台的本地客户端进行开发，您需要提前下载安装本地客户端并启动成功，并在本地客户端下进入全自动开发平台，如图8-6、图8-7、图8-8所示：
+
+##### 说明：关于如何使用本地客户端进入全自动开发平台，具体可参见[《SoFlu社区版快速入门教程第1、2、3节：下载、启动本地客户端，以及注册社区版》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md)
+
+![8-6](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/3_3.png)
+
+##### 图8-6 下载本地客户端
