--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
@@ -87,3 +87,13 @@ d）使用单函数组件调用函数OCR_picture(File file)去识别所上传的
 ![8-14](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/5_5.png)
 
 ##### 图8-14 修改组件名称
+
+![8-15](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/5_6.png)
+
+##### 图8-15 调用函数
+
+e）使用输出结果组件引用单函数的执行结果，将最终的结果输出显示，如图8-13、图8-14所示：
+
+![8-16](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/5_7.png)
+
+##### 图8-16 输出结果
