--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
@@ -109,3 +109,11 @@ f）流程图设计完成后，保存并退出窗体视图，如图8-15所示：
 ##### 图8-18 保存流程图
 
 g）提交并发布接口，如图8-16所示：
+
+![8-16](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/5_10.png)
+
+##### 图8-16 提交发布接口
+
+h）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图8-17所示：
+
+![8-17](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/5_11.png)
