--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/8. 识别图片文字.md
@@ -117,3 +117,13 @@ g）提交并发布接口，如图8-16所示：
 h）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图8-17所示：
 
 ![8-17](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/5_11.png)
+
+##### 图8-17 测试用例
+
+i）上传所需图片文件，并启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可，如图8-18所示：
+
+![8-18](https://www.feisuanyz.com/fsimage/alcj-image/picturerecognize/5_12.png)
+
+##### 图8-18 编辑并执行测试用例
+
+j）查看测试用例执行结果，可以看到图片解析后的文字输出结果，如图8-19所示：
