--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -5,3 +5,11 @@
 ##### 案例场景： 在信息高速发展的时代下，人脸识别功能已成为常见功能， 如人脸识别门禁考勤系统，人脸识别防盗门和网上软件实名认证等，但由于现在传统开发人员技术层次不齐，刚接触开发的人员想开发一个人脸的功能可能需要较长的时间，使用飞算SoFlu全自动软件工程平台就能极大地提升开发效率与时间，使用现有组件就能快速开发出人脸识别功能。
 
 案例通过在全自动开发平台构建调用人脸识别函数所需的参数，再调用人脸识别函数返回启动人脸识别服务所需的数据，前端获取到所需的数据便能启动人脸识别服务。案例仅用到了平台中的单函数组件、输出结果组件两种组件，通过拖拽组件绘制流程图并进行相关配置便可实现功能。
+
+##### 8.1.1 效果展示
+
+对在全自动开发平台创建的人脸识别接口执行测试用例，便可以获取到启动人脸识别服务所需的数据，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/alcj-image/renlian/2_1.png)
+
+##### 图1-1 全自动开发平台测试用例响应内容页面
