--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -13,3 +13,9 @@
 ![1-1](https://www.feisuanyz.com/fsimage/alcj-image/renlian/2_1.png)
 
 ##### 图1-1 全自动开发平台测试用例响应内容页面
+
+##### 注意： 本案例仅针对后端程序开发，若与前端程序联合使用，即前端获取到所需数据后启动人脸识别服务，便会正式进入到人脸识别页面（页面的具体样式由前端进行设计，可参考图1-2）。
+
+![1-2](https://www.feisuanyz.com/fsimage/alcj-image/renlian/2_2.png)
+
+##### 图1-2 前端效果图
