--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -19,3 +19,13 @@
 ![1-2](https://www.feisuanyz.com/fsimage/alcj-image/renlian/2_2.png)
 
 ##### 图1-2 前端效果图
+
+##### 8.1.2 准备工作
+
+a）提前准备一个开通了人脸核身服务的腾讯云账号。
+
+b）进入腾讯云控制台获取到相关参数，放入全自动开发平台配置组管理中，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/alcj-image/renlian/table1.png)
+
+##### 图1-3 参数说明
