--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -53,3 +53,13 @@ b） 将第一步构建的Map放入人脸识别函数中；
 c） 将启动人脸识别服务所需的参数构建成一个Map；
 
 d） 输出启动人脸识别服务所需的参数信息。
+
+##### 8.1.4 操作步骤
+
+a）新增人脸识别接口
+
+a1）进入全自动开发平台“接口管理”功能模块，新增人脸识别接口，填写接口的基本信息。
+
+![1-7](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_1.png)
+
+##### 图1-7 填写接口基本信息
