--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -63,3 +63,11 @@ a1）进入全自动开发平台“接口管理”功能模块，新增人脸识
 ![1-7](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_1.png)
 
 ##### 图1-7 填写接口基本信息
+
+a2）此处无需配置入参，单击“提交”，进入下一步。
+
+![1-8](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_2.png)
+
+##### 图1-8 提交并进入下一步
+
+a3）进入模型编辑。
