--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -71,3 +71,13 @@ a2）此处无需配置入参，单击“提交”，进入下一步。
 ##### 图1-8 提交并进入下一步
 
 a3）进入模型编辑。
+
+![1-9](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_3.png)
+
+##### 图1-9 进入模型编辑
+
+a4）在窗体视图中，通过拖拽左侧组件列表中的组件进行流程图的设计。
+
+![1-10](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_4.png)
+
+##### 图1-10 进行流程图设计
