--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -81,3 +81,13 @@ a4）在窗体视图中，通过拖拽左侧组件列表中的组件进行流程
 ![1-10](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_4.png)
 
 ##### 图1-10 进行流程图设计
+
+b）组件的具体配置
+
+b1）单函数组件【构建人脸请求入参】：调用构建Map函数newMapInit(Object[] keyAndValue)用于构建人脸识别函数的请求参数，如图1-11、图1-12、图1-13、图1-14、图1-15、图1-16所示：
+
+##### 说明：app_id、secret参数值引用配置组中的值，name、idNo参数值自行填写，user_id、orderNo、nonce在本案例中均通过函数getUuid()或getUuid32()获取。
+
+![1-11](https://www.feisuanyz.com/fsimage/alcj-image/renlian/table2.png)
+
+##### 图1-11 请求参数说明
