--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -91,3 +91,11 @@ b1）单函数组件【构建人脸请求入参】：调用构建Map函数newMap
 ![1-11](https://www.feisuanyz.com/fsimage/alcj-image/renlian/table2.png)
 
 ##### 图1-11 请求参数说明
+
+![1-12](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_5.png)
+
+##### 图1-12 单函数组件【构建人脸请求入参】
+
+![1-13](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_6.png)
+
+##### 图1-13 选择函数
