--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -99,3 +99,11 @@ b1）单函数组件【构建人脸请求入参】：调用构建Map函数newMap
 ![1-13](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_6.png)
 
 ##### 图1-13 选择函数
+
+![1-14](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_7.png)
+
+##### 图1-14 填写参数（记录1-4）
+
+![1-15](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_8.png)
+
+##### 图1-15 填写参数（记录5-10）
