--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -107,3 +107,11 @@ b1）单函数组件【构建人脸请求入参】：调用构建Map函数newMap
 ![1-15](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_8.png)
 
 ##### 图1-15 填写参数（记录5-10）
+
+![1-16](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_9.png)
+
+##### 图1-16 填写参数（记录11-14）
+
+b2）单函数组件【SDK人脸核身增强版】：调用人脸识别函数faceEnhancedEdition(Map params)返回启动人脸识别服务所需的数据，传入上一步构建的请求参数即可，如图1-17、图1-18所示：
+
+![1-17](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_10.png)
