--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -115,3 +115,13 @@ b1）单函数组件【构建人脸请求入参】：调用构建Map函数newMap
 b2）单函数组件【SDK人脸核身增强版】：调用人脸识别函数faceEnhancedEdition(Map params)返回启动人脸识别服务所需的数据，传入上一步构建的请求参数即可，如图1-17、图1-18所示：
 
 ![1-17](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_10.png)
+
+##### 图1-17 单函数组件【SDK人脸核身增强版】
+
+![1-18](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_11.png)
+
+##### 图1-18 选择函数传入参数
+
+b3）单函数组件【返回前端需要参数】：再次调用构建Map函数将启动人脸识别服务所需的参数构建成一个Map，如图1-19、图1-20、图1-21、图1-22、图1-23、图1-24、图1-25所示：
+
+##### 说明：此处赋值faceId、openApiSign参数需要用到【SDK人脸核身增强版】组件的编号；赋值agreementNo、openApiNonce、openApiUserId参数需要用到【构建人脸请求入参】组件的编号；openApiAppId、keyLicence参数值引用配置组中的值；openApiAppVersion参数值填写1.0.0；verifyMode参数值填写默认值FaceVerifyStatus.Mode.GRADE。
