--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -133,3 +133,11 @@ b3）单函数组件【返回前端需要参数】：再次调用构建Map函数
 ![1-20](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_12.png)
 
 ##### 图1-20 单函数组件【返回前端需要参数】
+
+![1-21](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_13.png)
+
+##### 图1-21 选择函数
+
+![1-22](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_14.png)
+
+##### 图1-22 填写参数（记录1-4）
