--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -141,3 +141,13 @@ b3）单函数组件【返回前端需要参数】：再次调用构建Map函数
 ![1-22](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_14.png)
 
 ##### 图1-22 填写参数（记录1-4）
+
+![1-23](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_15.png)
+
+##### 图1-23 填写参数（记录5-10）
+
+![1-24](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_16.png)
+
+##### 图1-24 填写参数（记录11-16）
+
+![1-25](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_17.png)
