--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -151,3 +151,13 @@ b3）单函数组件【返回前端需要参数】：再次调用构建Map函数
 ##### 图1-24 填写参数（记录11-16）
 
 ![1-25](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_17.png)
+
+##### 图1-25 填写参数（记录17-18）
+
+b4）使用输出结果组件输出上一步构建的信息，如图1-26、图1-27所示：
+
+![1-26](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_18.png)
+
+##### 图1-26 输出结果组件
+
+![1-27](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_19.png)
