--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -161,3 +161,13 @@ b4）使用输出结果组件输出上一步构建的信息，如图1-26、图1-
 ##### 图1-26 输出结果组件
 
 ![1-27](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_19.png)
+
+##### 图1-27 组件配置
+
+c）退出窗体视图
+
+流程图设计完成后，保存并退出窗体视图，如图1-28所示：
+
+![1-28](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_20.png)
+
+##### 图1-28 保存并退出
