--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -171,3 +171,11 @@ c）退出窗体视图
 ![1-28](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_20.png)
 
 ##### 图1-28 保存并退出
+
+d）提交并发布接口
+
+![1-29](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_21.png)
+
+##### 图1-29 提交并发布接口
+
+e）测试用例
