--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -179,3 +179,13 @@ d）提交并发布接口
 ##### 图1-29 提交并发布接口
 
 e）测试用例
+
+e1）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图1-30所示：
+
+![1-30](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_22.png)
+
+##### 图1-30 使用测试用例
+
+e2）勾选复选框后点击编辑，进入测试用例界面，如图1-31所示：
+
+![1-31](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_23.png)
