--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/1. 人脸识别.md
@@ -189,3 +189,11 @@ e1）对接口进行测试用例，检验接口实现的功能是否可以达到
 e2）勾选复选框后点击编辑，进入测试用例界面，如图1-31所示：
 
 ![1-31](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_23.png)
+
+##### 图1-31 进入测试用例界面
+
+e3）进入测试用例页面后，开启可视化日志，单击“执行”即可查看接口的执行结果，如图1-32所示：
+
+![1-32](https://www.feisuanyz.com/fsimage/alcj-image/renlian/5_24.png)
+
+##### 图1-32 查看接口执行结果
