--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -3,3 +3,11 @@
 #### 2.1 发送短信验证码
 
 本节实例是结合腾讯云实现发送短信验证码的功能，全自动开发平台不仅可以在平台内部实现功能开发，还可以与外部工具联用以实现用户各种各样的功能需求，体现了全自动开发平台灵活包容、便捷好用的功能特点。实例主要用到了平台的单函数组件、单SQL组件、互斥条件组件，这三种组件的结合也是一种经典搭配，可适用于多种不同的案例场景，同时通过调用平台中的系统函数或自定义函数来实现特定功能。
+
+##### 2.1.1 效果展示
+
+通过调用发送短信验证码接口，传入接收短信验证码的手机号，即可实现对指定手机号发送短信验证码的功能，如图2-1所示：
+
+![2-1](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_1.png)
+
+##### 图2-1 编辑接口测试用例
