--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -11,3 +11,9 @@
 ![2-1](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_1.png)
 
 ##### 图2-1 编辑接口测试用例
+
+![2-2](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_2.png)
+
+##### 图2-2 验证码信息
+
+##### 2.1.2 准备工作
