--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -17,3 +17,9 @@
 ##### 图2-2 验证码信息
 
 ##### 2.1.2 准备工作
+
+a）提前准备一个开通了短信服务的腾讯云账号，关于如何注册腾讯云账号及开通短信服务可参见腾讯云文档(文档中心 > 短信 > 国内短信 > 国内短信快速入门)。
+
+b）提前准备功能实现过程中需要使用到的两张数据表：参数表sy_params（用来配置获取验证码次数上限和验证码有效时长的参数信息）、短信表user_note（用来存储用户手机号、发送短信次数、发送短信时间及短信验证码等信息），表结构设计及相关数据如下图所示：
+
+参数表sy_params：
