--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -38,3 +38,11 @@ CREATE TABLE `sy_params` (
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='参数表';
 
 ```
+
+![2-3](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_3.png)
+
+##### 图2-3 参数表参数说明
+
+##### 说明：参数表中的配置信息可自行设置，本案例主要配置了verificationCodeDuration 【验证码有效时长（分钟）】和todayVerification【当天获取验证码次数上限】。
+
+短信表user_note：
