--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -46,3 +46,13 @@ CREATE TABLE `sy_params` (
 ##### 说明：参数表中的配置信息可自行设置，本案例主要配置了verificationCodeDuration 【验证码有效时长（分钟）】和todayVerification【当天获取验证码次数上限】。
 
 短信表user_note：
+
+```
+CREATE TABLE `user_note` (
+  `mobileSms_id` varchar(255) NOT NULL COMMENT '短信记录Id',
+  `receiver_mobile` varchar(255) DEFAULT '' COMMENT '手机号',
+  `dayNum` int(11) DEFAULT NULL COMMENT '当天获取验证码次数',
+  `create_time` datetime DEFAULT NULL COMMENT '验证码发送时间',
+  `verify_code` varchar(255) DEFAULT '' COMMENT '发送的验证码'
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='短信表';
+```
