--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -56,3 +56,9 @@ CREATE TABLE `user_note` (
   `verify_code` varchar(255) DEFAULT '' COMMENT '发送的验证码'
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='短信表';
 ```
+
+![2-4](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_4.png)
+
+##### 图2-4 短信表参数说明
+
+##### 说明：短信表中的数据在调用接口后自动生成。
