--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -62,3 +62,9 @@ CREATE TABLE `user_note` (
 ##### 图2-4 短信表参数说明
 
 ##### 说明：短信表中的数据在调用接口后自动生成。
+
+c）需进入腾讯云短信控制台拿到相关短信参数，放入全自动开发平台配置组管理中，具体如下图所示：
+
+![2-5](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_5.png)
+
+##### 图2-5 相关短信参数
