--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -105,3 +105,17 @@ b）在【短信表】查询当前手机号当天获取验证码的次数。
 c）判断当前手机号【当天获取验证码次数】的值是否为空，若为空，则进行新增操作，新增一条发送短信记录；若不为空，继续以下流程。
 
 d）再次查询【短信表】，获取【当前手机号当天获取验证码的次数】
+
+e）判断【当前手机号当天获取验证码的次数】是否小于【当天获取验证码次数上限】，若大于等于，说明今日已超过验证码发送次数限制，将输出发送失败信息；若小于，则继续以下流程。
+
+f）生成短信验证码。
+
+g）为当前手机号加上中国大陆地区手机标识【+86】（因为本案例仅针对国内手机号验证码发送）。
+
+h）给指定手机号发送验证码信息。
+
+i）更新当前手机号短信表中的内容，即当前手机号验证码发送次数、验证码发送时间、当前发送的验证码信息。
+
+j）输出验证码发送成功信息。
+
+##### 2.1.4 操作步骤
