--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -133,3 +133,17 @@ a）新增发送短信验证码接口
 ##### 图2-12 填写基本信息
 
 b）配置接口的入口参数
+
+此处需配置一个String类型的参数receiverMobile作为接收验证码的手机号。
+
+![2-13](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_13.png)
+
+##### 图2-13 配置入口参数
+
+c）模型编辑
+
+通过拖拽左侧组件列表中所需的组件进行模型编辑（即流程图编辑）。
+
+![2-14](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_14.png)
+
+##### 图2-14 点击模型编辑
