--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -147,3 +147,17 @@ c）模型编辑
 ![2-14](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_14.png)
 
 ##### 图2-14 点击模型编辑
+
+![2-15](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_15.png)
+
+##### 图2-15 编辑流程图
+
+d）组件的具体配置（按逻辑描述展示）
+
+d1）在【参数表】查询【当天获取验证码次数上限】。
+
+d1-1）使用单函数组件调用函数newMapInit(Object[] keyAndValue)构造查询参数【paramId】，需传入参数值todayVerification，在参数表中表示【当天获取验证码次数上限】。
+
+![2-16](https://feisuanyz.com/fsimage/alcj-image/sendmessage/send_16.png)
+
+##### 图2-16 构造查询参数
