--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -193,3 +193,13 @@ d2-1）使用单函数组件调用函数getCurrDate()获取当前日期。
 ![2-22](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_22.png)
 
 ##### 图2-22 填写数据
+
+d2-2）使用单函数组件调用函数newMapInit(Object[] keyAndValue)构造查询参数【手机号】【当前日期】，需传入参数receiverMobile（接收验证码的手机号）以及上一步获取到的createTime（当前日期）。
+
+![2-23](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_23.png)
+
+##### 图2-23 构造查询参数
+
+![2-24](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_24.png)
+
+##### 图2-24 填写数据
