--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -274,3 +274,13 @@ d3-4）若不为空，则使用单函数组件调用函数strToInt(String source
 ##### 图2-38 流转条件
 
 ![2-39](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_39.png)
+
+##### 图2-39 填写数据
+
+d4）再次使用单SQL组件，根据当前手机号及当前时间查询【短信表】获取【当前手机号当天获取验证码的次数】，具体SQL信息如下。（此处再次查询短信表是由于新增操作后短信表有更新）
+
+![2-40](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_40.png)
+
+##### 图2-40 再次查询短信表
+
+![2-41](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_41.png)
