--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -284,3 +284,13 @@ d4）再次使用单SQL组件，根据当前手机号及当前时间查询【短
 ##### 图2-40 再次查询短信表
 
 ![2-41](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_41.png)
+
+##### 图2-41 填写数据
+
+![2-42](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_42.png)
+
+##### 图2-42 SQL内容
+
+d5）使用互斥条件组件判断【当前手机号当天获取验证码的次数】是否小于【当天获取验证码次数上限】，若大于等于，说明今日已超过验证码发送次数限制，将输出发送失败信息；若小于，则继续以下流程。
+
+![2-43](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_43.png)
