--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -294,3 +294,11 @@ d4）再次使用单SQL组件，根据当前手机号及当前时间查询【短
 d5）使用互斥条件组件判断【当前手机号当天获取验证码的次数】是否小于【当天获取验证码次数上限】，若大于等于，说明今日已超过验证码发送次数限制，将输出发送失败信息；若小于，则继续以下流程。
 
 ![2-43](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_43.png)
+
+##### 图2-43 判断逻辑
+
+【当前手机号当天获取验证码的次数】大于等于【当天获取验证码次数上限】时：
+
+![2-44](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_44.png)
+
+##### 图2-44 流转条件
