--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -302,3 +302,13 @@ d5）使用互斥条件组件判断【当前手机号当天获取验证码的次
 ![2-44](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_44.png)
 
 ##### 图2-44 流转条件
+
+![2-45](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_45.png)
+
+##### 图2-45 填写数据
+
+【当前手机号当天获取验证码的次数】小于【当天获取验证码次数上限】时：
+
+![2-46](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_46.png)
+
+##### 图2-46 流转条件
