--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -312,3 +312,11 @@ d5）使用互斥条件组件判断【当前手机号当天获取验证码的次
 ![2-46](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_46.png)
 
 ##### 图2-46 流转条件
+
+d6）使用单函数组件生成短信验证码，此处使用的函数为获取范围内随机数函数getRandomByRange(Long rangeBegin,Long rangeEnd)，传入参数1000、10000用于获取四位数短信验证码。
+
+![2-47](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_47.png)
+
+##### 图2-47 生成验证码
+
+![2-48](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_48.png)
