--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -320,3 +320,13 @@ d6）使用单函数组件生成短信验证码，此处使用的函数为获取
 ##### 图2-47 生成验证码
 
 ![2-48](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_48.png)
+
+##### 图2-48 填写数据
+
+d7）使用单函数组件为当前手机号加上中国大陆地区手机标识【+86】，使用的函数为拼接字符串函数concatStrs(String[] strs)，需传入字符串“+86”以及接口入参“receiverMobile”（因为本案例仅针对国内手机号验证码发送，故需要进行该操作）。
+
+![2-49](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_49.png)
+
+##### 图2-49 为手机号加上【+86】标识
+
+![2-50](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_50.png)
