--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -330,3 +330,13 @@ d7）使用单函数组件为当前手机号加上中国大陆地区手机标识
 ##### 图2-49 为手机号加上【+86】标识
 
 ![2-50](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_50.png)
+
+##### 图2-50 填写数据
+
+d8）给指定手机号发送验证码信息。
+
+d8-1）使用单函数组件构建发送验证码信息请求参数，此处需用到配置组的参数信息secretId、secretKey、templateID、smsSdkAppid、sign，以及加上中国大陆标识的手机号phoneNumberSet和验证码templateParamSet。
+
+![2-51](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_51.png)
+
+##### 图2-51 构建发送验证码信息请求参数
