--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -370,3 +370,13 @@ d9）更新当前手机号短信表中的内容，即当前手机号验证码发
 ![2-57](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_57.png)
 
 ##### 图2-57 构建修改短信表的请求参数
+
+![2-58](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_58.png)
+
+##### 图2-58 填写数据（记录1-记录4）
+
+![2-59](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_59.png)
+
+##### 图2-59 填写数据（记录5-记录8）
+
+![2-60](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_60.png)
