--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -380,3 +380,13 @@ d9）更新当前手机号短信表中的内容，即当前手机号验证码发
 ##### 图2-59 填写数据（记录5-记录8）
 
 ![2-60](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_60.png)
+
+##### 图2-60 修改短信表
+
+![2-61](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_61.png)
+
+##### 图2-61 填写数据
+
+![2-62](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_62.png)
+
+##### 图2-62 SQL内容
