--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -390,3 +390,13 @@ d9）更新当前手机号短信表中的内容，即当前手机号验证码发
 ![2-62](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_62.png)
 
 ##### 图2-62 SQL内容
+
+d10）使用输出结果组件输出验证码发送成功信息。
+
+![2-63](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_63.png)
+
+##### 图2-63 输出验证码发送成功信息
+
+![2-64](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_64.png)
+
+##### 图2-64 填写数据
