--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -400,3 +400,13 @@ d10）使用输出结果组件输出验证码发送成功信息。
 ![2-64](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_64.png)
 
 ##### 图2-64 填写数据
+
+##### 2.1.5 退出窗体视图
+
+流程图设计完成后，保存并退出窗体视图。
+
+![2-65](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_65.png)
+
+##### 图2-65 保存并退出
+
+##### 2.1.6 提交并发布接口
