--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -410,3 +410,13 @@ d10）使用输出结果组件输出验证码发送成功信息。
 ##### 图2-65 保存并退出
 
 ##### 2.1.6 提交并发布接口
+
+![2-66](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_66.png)
+
+##### 图2-66 提交并发布接口
+
+##### 2.1.7 测试用例
+
+a）对接口进行测试用例，检验接口实现的功能是否可以达到预期。
+
+![2-67](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_67.png)
